RESOLVED FIXED51355
Crash in RenderMathMLSubSup::layout() because of null base
https://bugs.webkit.org/show_bug.cgi?id=51355
Summary Crash in RenderMathMLSubSup::layout() because of null base
Beth Dakin
Reported 2010-12-20 14:44:51 PST
Title says it all. Patch coming. <rdar://problem/8712200>
Attachments
Test case (275 bytes, text/html)
2010-12-20 14:45 PST, Beth Dakin
no flags
Patch (3.10 KB, patch)
2010-12-20 14:49 PST, Beth Dakin
adachan: review+
Beth Dakin
Comment 1 2010-12-20 14:45:20 PST
Created attachment 77039 [details] Test case
Beth Dakin
Comment 2 2010-12-20 14:49:27 PST
Beth Dakin
Comment 3 2010-12-20 14:58:36 PST
Thanks Ada! Fixed with revision 74370.
WebKit Review Bot
Comment 4 2010-12-20 15:58:30 PST
http://trac.webkit.org/changeset/74370 might have broken GTK Linux 64-bit Debug The following tests are not passing: inspector/extensions-audits.html
Note You need to log in before you can comment on or make changes to this bug.