WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=51355 Crash in RenderMathMLSubSup::layout() because of null base -and corresponding- <rdar://problem/8712200>

Reviewed by Ada Chan.

Only use base inside if(base) block.
* mathml/RenderMathMLSubSup.cpp:
(WebCore::RenderMathMLSubSup::layout):

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=51355 Crash in 
RenderMathMLSubSup::layout() because of null base
-and corresponding-
<rdar://problem/8712200>

Reviewed by Ada Chan.

* mathml/empty-msubsup-crash-expected.txt: Added.
* mathml/empty-msubsup-crash.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@74370 bbb929c8-8fbe-4397-9dbb-9b2b20218538